# tflite-input-output-rewriter

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
tfliteiorewriter/: __init__.py  main.py
