[build-system]
requires = ["setuptools", "setuptools_scm", "requests"]
build-backend = "setuptools.build_meta"

[project]
name = "tfliteiorewriter"
description = "This tool displays tflite signatures and rewrites the input/output OP name to the name of the signature. There is no need to install TensorFlow or TFLite."
authors = [{name="Katsuya Hyodo", email="rmsdh122@yahoo.co.jp" }]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "requests"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/PINTO0309/tflite-input-output-rewriter"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools.dynamic]
version = {attr = "tfliteiorewriter.version"}

[tool.setuptools_scm]
write_to = "tfliteiorewriter/_version.py"

[project.scripts]
tfliteiorewriter = "tfliteiorewriter.main:cli"